--- a/kimochi3.html
+++ b/kimochi3.html
@@ -48,22 +48,16 @@
   <!--結果表示-->
 
   <div style="display: none;" id="maru">
-    <div id="keizoku">
-      <p>Congratulations!</p>
-    </div>
-
     <div id="next">
-      <a href="kimochi_start.html">はじめから</a>
+      <a href="syacho.html">次へ</a>
     </div>
   </div>
 
+
   <div style="display: none;" id="batu">
-    <div id="game_over">
-      <p>GAME OVER</p>
-    </div>
 
     <div id="hajime">
-      <a href="kimochi_start.html">はじめから</a>
+      <a href="gameover.html">はじめから</a>
     </div>
   </div>
 
